spring-mongo/templates/service-spring.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  selector:
    app: springboot-app
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
      nodePort: 30002
  type: NodePort
