spring-mongo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    #nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    #nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    #nginx.ingress.kubernetes.io/proxy-set-headers: |
    #  Upgrade $http_upgrade;
    #  Connection "upgrade";
spec:
  rules:
    #- host: your-domain.com                # Replace with your actual domain
   - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: react-service     # Name of React service
              port:
                number: 3000
        - path: /api                      # Route for Spring Boot backend
          pathType: Prefix
          backend:
            service:
              name: springboot-service    # Name of Spring Boot service
              port:
                number: 8088
